Fix declingle board sizes on small screens

--- a/styles/board.scss
+++ b/styles/board.scss
@@ -114,7 +114,7 @@
   .board.quadlingle {
     font-size: clamp(1.2rem, 5.2vw, 3.8rem) !important;
   }
-  .board.octolingle {
+  .board.octolingle, .board.declingle {
     font-size: clamp(1.2rem, 5.2vw, 3.8rem) !important;
   }
 }
